terraform/main.tf
resource "aws_security_group" "banana_sg" {

  name = "banana-sg"

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


data "aws_ami" "ubuntu" {

  most_recent = true

  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
}

resource "aws_instance" "banana_ec2" {

  ami           = data.aws_ami.ubuntu.id
  instance_type = "t3.micro"

  key_name = "banana"

  vpc_security_group_ids = [
    aws_security_group.banana_sg.id
  ]

  tags = {
    Name = "banana-server"
  }
}

resource "aws_eip" "banana_ip" {

  instance = aws_instance.banana_ec2.id
}
